tests/NormalTests/paczka1/fuzzy1/76340463.err
Error in line 1: aFsvLCSg A175 89,6
Error in line 4: 425b0Q A175 87,5
Error in line 12: OaPJ S677 13,9
Error in line 15: 425b0Q A175 73,0
Error in line 21: 425b0Q A359 69,51
